<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar2"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:padding="15dp"
        tools:ignore="SpeakableTextPresentCheck" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/ab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="13dp"
                android:layout_weight="3">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textview"
                    android:text="ABOUT METASCAN:"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:elegantTextHeight="true"
                    android:padding="15dp"
                    android:text="@string/tv1"
                    android:textSize="15dp"
                    tools:ignore="TextSizeCheck" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/abc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="13dp"
                android:layout_weight="3"
                android:layout_below="@id/ab"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tv2"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:elegantTextHeight="true"/>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elegantTextHeight="true"
                        android:text="@string/tv3"
                        android:textSize="15dp"
                        tools:ignore="TextSizeCheck" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elegantTextHeight="true"
                        android:text="@string/tv4"
                        android:textSize="15dp"
                        tools:ignore="TextSizeCheck" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elegantTextHeight="true"
                        android:text="@string/tv5"
                        android:textSize="15dp"
                        tools:ignore="TextSizeCheck" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elegantTextHeight="true"
                        android:text="@string/tv6"
                        android:textSize="15dp"
                        tools:ignore="TextSizeCheck" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elegantTextHeight="true"
                        android:text="@string/tv7"
                        android:textSize="15dp"
                        tools:ignore="TextSizeCheck" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elegantTextHeight="true"
                        android:text="@string/tv8"
                        android:textSize="15dp"
                        tools:ignore="TextSizeCheck" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
